# libjdrones

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.sh
.github/workflows/: CD.yml  CI.yml
_build/: jdronesConfig.cmake
bench/: CMakeLists.txt  benchmark_data.cpp  benchmark_envs.cpp  benchmark_lqrdroneenv.cpp  benchmark_polynomial.cpp  benchmark_transforms.cpp
cmake/: Deps.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
include/jdrones/: constants.h  controllers.h  data.h  dynamics.h  envs.h  gymnasium.h  polynomial.h  solvers.h  transforms.h  types.h
include/jdrones/dynamics/: base.h  dynamics.h  linear.h  nonlinear.h
include/jdrones/envs/: envs.h  lqr.h
include/jdrones/envs/poly/: base.h  fifth.h  opt_fifth.h
src/: controllers.cpp  dynamics.cpp  envs.cpp  polynomial.cpp  python.cpp  solvers.cpp  transforms.cpp
src/libjdrones/: __init__.py
test/: CMakeLists.txt
test/python/: test_bindings.py
test/src/: test_controller.cpp  test_data.cpp  test_dynamicdroneenv.cpp  test_envs.cpp  test_polynomial.cpp  test_solvers.cpp  utils.h
